--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,17 @@
-<DOCTYPE html!>
+<DOCTYPE html>
     <head>
-        <title>Tema's To-Do List App</title>
+        <title>To-Do List App</title>
         <link rel = "Stylesheet" href = "css/todo.css">
-        
-
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="assets/favicon.ico">
+        <link rel="icon" type="image/gif" href="assets/animated_favicon.gif">
     </head>
+    <body>
+        <div id="todo">
+            <h1>My To-do List<i id="pensil" class="fas fa-pencil-alt"></i></h1>
+            <input type = "text" placeholder="Add New List">
+            <ul class
+        </div>
+    </body>
