--- a/todo.html
+++ b/todo.html
@@ -30,8 +30,13 @@
 
         <div id="overlay">
             <a href="javascript:void(0)" class="closeTips">&times;</a>
-            <ul class = "tips">
+            <ul class="tips">
                 <li>To hide or show input field click on pencil</li>
+                <li>To add a to-do list, write your text in the input field and press Enter</li>
+                <li>To delete one item, hover over it and click on the trash can icon</li>
+                <li>To delete all to-do lists, click "Clear"</li>
+                <li>Click "Save" to save the to-do list for later</li>
+
             </ul>
 
         </div>
