--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div id="buttons">
                 <button class="save">Save</button>
                 <button class="clear">Clear</button>
-                <button class="tips">Tips</button>
+                 <!--<button class="tips">Tips</button>-->
             </div>
         </div>
 
-        <div id="overlay">
+        <!--<div id="overlay">
             <a href="javascript:void(0)" class="closeTips">&times;</a>
             <ul class="tips">
                 <li>To hide or show input field click on pencil</li>
@@ -36,8 +36,7 @@
                 <li>To delete one item, hover over it and click on the trash can icon</li>
                 <li>To delete all to-do lists, click "Clear"</li>
                 <li>Click "Save" to save the to-do list for later</li>
-
             </ul>
 
-        </div>
+        </div>-->
     </body>
