--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="buttons">
                 <button class="save">Save</button>
                 <button class="clear">Clear</button>
-                 <!--<button class="tips">Tips</button>-->
+                <!--<button class="tips">Tips</button>-->
             </div>
         </div>
 
@@ -39,4 +39,5 @@
             </ul>
 
         </div>-->
+        <script src="js/todo.js"></script> 
     </body>
