--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="todo">
             <h1>My To-do List<i id="pencil" class="fas fa-pencil-alt"></i></h1>
 
-            <input type="text" placeholder="Type some new to-do-yeee here!">
+            <input type="text" placeholder="Type some new todo-yeee here!">
 
             <ul class="todos">
                 <li><span><i class="fas fa-trash-alt"></i></span>Early wake up</li>
