--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>To-Do List App</title>
-        <link rel="Stylesheet" href="css/todo.css">
+        <link rel="stylesheet" href="css/todo.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
