--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
     <head>
         <title>To-Do List App</title>
         <link rel="stylesheet" href="css/todo.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="assets/favicon.ico">
         <link rel="icon" type="image/gif" href="assets/animated_favicon.gif">
     </head>
 
     <body>
         <div id="todo">
-            <h1>My To-do List<i id="pencil" class="fas fa-pencil-alt"></i></h1>
+            <h1>My To-do List
+                <i id="pencil" class="fas fa-pencil-alt"></i>
+            </h1>
 
             <input type="text" placeholder="Type some new todo-yeee here!">
 
